--- a/data/build.gradle
+++ b/data/build.gradle
@@ -11,4 +11,5 @@ java {
 dependencies {
     implementation project(':domain')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.koin:koin-core:$koin_version"
 }
