--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.10"
     ext.koin_version = "2.2.0"
+    ext.uniflow_version = "0.11.6"
     repositories {
         google()
         jcenter()
