add first API call

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,10 +58,12 @@ dependencies {
     testImplementation "io.uniflow:uniflow-androidx-test:$uniflow_version"
 
     implementation("com.squareup.moshi:moshi:1.11.0")
+    implementation("com.squareup.moshi:moshi-kotlin:1.9.1")
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     //network
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
 }
