--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,6 +9,9 @@ java {
 }
 
 dependencies {
+    implementation("com.squareup.moshi:moshi:1.11.0")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.koin:koin-core:$koin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
 }
