--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 
     implementation 'androidx.preference:preference-ktx:1.1.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-core-ext:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
@@ -60,6 +62,8 @@ dependencies {
     implementation("com.squareup.moshi:moshi:1.11.0")
     implementation("com.squareup.moshi:moshi-kotlin:1.9.1")
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    //this version support flow and coroutines
+    implementation 'androidx.paging:paging-runtime:3.0.0-alpha09'
 
     //network
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
