--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':data')
     //IMPORTS
+    //CORE
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -50,7 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
-
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation "org.koin:koin-core:$koin_version"
@@ -59,15 +59,19 @@ dependencies {
     implementation  "io.uniflow:uniflow-androidx:$uniflow_version"
     testImplementation "io.uniflow:uniflow-androidx-test:$uniflow_version"
 
-    implementation("com.squareup.moshi:moshi:1.11.0")
-    implementation("com.squareup.moshi:moshi-kotlin:1.9.1")
-    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    //UI
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
     //this version support flow and coroutines
-    implementation 'androidx.paging:paging-runtime:3.0.0-alpha09'
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha09'
 
     //network
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    implementation("com.squareup.moshi:moshi:1.11.0")
+    implementation("com.squareup.moshi:moshi-kotlin:1.9.1")
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 }
