--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pokemon">
-        <activity android:name=".ui.view.splash.SplashActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Fullscreen"
+        <activity
+            android:name=".ui.view.MainActivity"
+            android:label="@string/title_activity_main_activity"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,13 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.view.pokemon.PokemonListActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
     </application>
 
 </manifest>
