--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 repositories {
     jcenter()
+    maven { url 'https://jitpack.io' }
+
 }
 
 android {
@@ -19,7 +21,10 @@ android {
         buildConfigField "String", "API_URL", "\"https://pokeapi.co/api/v2/\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -57,12 +62,13 @@ dependencies {
     implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-core-ext:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    implementation  "io.uniflow:uniflow-androidx:$uniflow_version"
+    implementation "io.uniflow:uniflow-androidx:$uniflow_version"
     testImplementation "io.uniflow:uniflow-androidx-test:$uniflow_version"
 
     //UI
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.2coffees1team:GlideToVectorYou:v1.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.1"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.1"
