--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,12 @@ dependencies {
     implementation("com.squareup.moshi:moshi:1.11.0")
     implementation("com.squareup.moshi:moshi-kotlin:1.9.1")
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
+
 }
 apply plugin: "androidx.navigation.safeargs.kotlin"
