--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.4.10"
     ext.koin_version = "2.2.0"
     ext.uniflow_version = "0.11.6"
+    ext.room_version = "2.2.5"
     repositories {
         google()
         jcenter()
