--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,15 @@ android {
         versionName "1.0"
         buildConfigField "String", "API_URL", "\"https://pokeapi.co/api/v2/\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"]
+            }
+        }
     }
     buildFeatures {
         dataBinding true
@@ -40,6 +49,8 @@ android {
     }
 }
 
+apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'kotlin-kapt'
 dependencies {
     //MODULE
     implementation project(':domain')
@@ -85,10 +96,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     //room
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
 
 }
-apply plugin: "androidx.navigation.safeargs.kotlin"
