--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
 }
 repositories {
     jcenter()
     maven { url 'https://jitpack.io' }
 
 }
-
-
 
 android {
     compileSdkVersion 30
@@ -34,7 +34,6 @@ android {
     }
     buildFeatures {
         dataBinding true
-        viewBinding true
     }
     buildTypes {
         release {
@@ -49,14 +48,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    configurations.all() {
-        resolutionStrategy.force "org.antlr:antlr4-runtime:4.5.3"
-        resolutionStrategy.force "org.antlr:antlr4-tool:4.5.3"
-    }
 }
 
-apply plugin: "androidx.navigation.safeargs.kotlin"
-apply plugin: 'kotlin-kapt'
 dependencies {
     //MODULE
     implementation project(':domain')
@@ -69,7 +62,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
@@ -105,6 +98,4 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
-
-
 }
